fix redirecting issue

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,13 @@
     -->
     <title>Varad Kulkarni</title>
   </head>
+  <script>
+    const redirectPath = sessionStorage.redirect;
+    if (redirectPath) {
+      delete sessionStorage.redirect;
+      window.history.replaceState(null, null, redirectPath);
+    }
+  </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
